Added New Images and Adjusted Styling of Images

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a href="https://de.freepik.com/vektoren/hintergrund" class="attribution">Hintergrund Vektor erstellt von brgfx - de.freepik.com</a>
     </div>
     <div id="card" class="card">
-        <div class="image" id="image"></div>
+        <img src="img/fox.png" class="image" id="image"></div>
     </div>
 
 </body>
