Use Cartoon Images

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
 
     <div class="attribution">
         <a href="https://de.freepik.com/vektoren/hintergrund" class="attribution">Hintergrund Vektor erstellt von brgfx - de.freepik.com</a>
+        <div>Icons made by <a href="" title="smalllikeart">smalllikeart</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </div>
     <div id="card" class="card">
-        <img src="img/fox.png" class="image" id="image"></div>
+        <img src="img/cartoon/monkey.png" class="image" id="image"></div>
     </div>
 
 </body>
