--- a/index.html
+++ b/index.html
@@ -49,7 +49,18 @@
                 
                 <div>
                     <div class="result" id="result"></div>
-                </div>         
+                </div>       
+                
+                <div class="points">
+                    <div  class="player-points">
+                        <div class="player-text">Games won</div>
+                        <div id="games-won" class="points-value">0</div>
+                    </div>
+                    <div  class="player-points">
+                        <div class="player-text">Games lost</div>
+                        <div id="games-lost" class="points-value">0</div>
+                    </div>
+                </div>   
         </div>
     </div>
 
