--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div>Icons made by <a href="" title="smalllikeart">smalllikeart</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </div>
     <div id="card" class="card">
-        <img src="img/cartoon/monkey.png" class="image" id="image"></div>
+        <img src="img/monkey.png" class="image" id="image"></div>
     </div>
 
 </body>
